Salvando informacoes no banco

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="victor.machado.com.br.registro">
 
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -22,7 +24,10 @@
         <activity android:name=".CadastroActivity" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".ConfirmaActivity" />
-        <activity android:name=".ImagemActivity"></activity>
+        <activity android:name=".ImagemActivity" />
+        <activity android:name=".AssinaturaActivity" />
+        <activity android:name=".ExibePDFActivity" />
+        <activity android:name=".ListarFormsActivity"></activity>
     </application>
 
 </manifest>
