--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     compile 'com.github.rtoshiro.mflibrary:mflibrary:1.0.0'
     compile 'com.itextpdf:itextg:5.5.10'
     testCompile 'junit:junit:4.12'
+    compile 'com.android.support:design:25.3.1'
 }
