--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,12 @@ dependencies {
     compile 'commons-io:commons-io:2.4'
     compile 'com.github.rtoshiro.mflibrary:mflibrary:1.0.0'
     compile 'com.itextpdf:itextg:5.5.10'
-    testCompile 'junit:junit:4.12'
     compile 'com.android.support:design:25.3.1'
+    compile 'com.google.firebase:firebase-auth:10.0.1'
+    compile 'com.google.firebase:firebase-database:10.0.1'
+    testCompile 'junit:junit:4.12'
 }
+
+
+
+apply plugin: 'com.google.gms.google-services'
