--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,15 +25,15 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.felipecsl:gifimageview:2.1.0'
-    compile 'commons-io:commons-io:2.4'
-    compile 'com.github.rtoshiro.mflibrary:mflibrary:1.0.0'
-    compile 'com.itextpdf:itextg:5.5.10'
-    compile 'com.android.support:design:25.3.1'
-    compile 'com.google.firebase:firebase-auth:10.0.1'
-    compile 'com.google.firebase:firebase-database:10.0.1'
+    implementation 'com.android.support:appcompat-v7:25.3.1'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.felipecsl:gifimageview:2.1.0'
+    implementation 'commons-io:commons-io:2.4'
+    implementation 'com.github.rtoshiro.mflibrary:mflibrary:1.0.0'
+    implementation 'com.itextpdf:itextg:5.5.10'
+    implementation 'com.android.support:design:25.3.1'
+    implementation 'com.google.firebase:firebase-auth:10.0.1'
+    implementation 'com.google.firebase:firebase-database:10.0.1'
     testCompile 'junit:junit:4.12'
 }
 
