--- a/build.gradle
+++ b/build.gradle
@@ -2,19 +2,21 @@
 
 buildscript {
     repositories {
+        google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.2'
+        classpath 'com.android.tools.build:gradle:3.6.1'
 
         // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        // in the individual module build.gradle filesclasspath 'com.android.tools.build:gradle:3.6.1'
         classpath 'com.google.gms:google-services:3.0.0'
     }
 }
 
 allprojects {
     repositories {
+        google()
         jcenter()
         mavenCentral()
         maven {
