--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="victor.machado.com.br.registro">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -34,8 +35,14 @@
         <activity android:name="telas.CadastroActivity" />
         <activity android:name="telas.LoginActivity" />
         <activity android:name="telas.ConfirmaActivity" />
-        <activity android:name="telas.AssinaturaActivity" />
-        <activity android:name="telas.ImagemActivity" />
+        <activity android:name="telas.AssinaturaActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity" />
+        <activity android:name="telas.ImagemActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity" />
         <activity android:name="telas.ExibePDFActivity" />
         <activity android:name="telas.ListarFormsActivity" />
         <activity android:name="telas.ConfiguracoesActivity" />
